--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div class="content"><!---for content--->
+		<div class="left-img"><!---for content--->
 		<h1>facebook</h1>	
 			<h4>Facebook helps you connect and share</h4>
 			<h4 class="line-2">with the people in your life</h4>
 		</div>
-		<div class="card"> <!---for card------>
+		<div class="signup"> <!---for card------>
 		<form>
-			<input type="text" placeholder="Email address or phone number">
+			<input type="text" id="email" placeholder="Email address or phone number">
 		<input type="password" placeholder="Password">
 		<button class="first">Log in</button>
 			<p>Forgotten account?</p>
