--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<div class="signup"> <!---for card------>
 		<form>
 			<input type="text" id="email" placeholder="Email address or phone number">
-		<input type="password" placeholder="Password">
+		<input type="password" id="password" placeholder="Password">
 		<button class="first">Log in</button>
 			<p>Forgotten account?</p>
 			<button class="second">Create new account</button>
