--- a/main.html
+++ b/main.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -9,8 +7,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div class="left-img"><!---for content--->
-		<h1>facebook</h1>	
+		<div class="left"><!---for content--->
+		<img src="https://images.unsplash.com/photo-1549813069-f95e44d7f498?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1656&q=80">
 			<h4>Facebook helps you connect and share</h4>
 			<h4 class="line-2">with the people in your life</h4>
 		</div>
@@ -19,7 +17,7 @@
 			<input type="text" id="email" placeholder="Email address or phone number">
 		<input type="password" id="password" placeholder="Password">
 		<button class="first">Log in</button>
-			<p>Forgotten account?</p>
+		<a><p>Forgotten account?</p></a>
 			<button class="second">Create new account</button>
 		</form>	
 		</div>
