--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 			<input type="text" id="email" placeholder="Email address or phone number">
 		<input type="password" id="password" placeholder="Password">
 		<button class="first">Log in</button>
-		<a><p>Forgotten account?</p></a>
+		<a href="/recover/initiate"><p>Forgotten account?</p></a>
 			<button class="second">Create new account</button>
 		</form>	
 		</div>
